@startuml

hide methods
left to right direction


class Platform {

}

class Organization {
  -String orgName
  -Integer paymentDay
  -Time paymentTime
}

class Freelancer {
-String idFreelancer
-String freelancerName
-String freelancerExpertise
-String freelancerEmail
-String freelancerNIF
-String freelancerBankAccount
-String freelancerAddress
-String freelancerCountry
}


class Task{
-Integer taskID
-Integer taskAssignDuration
-Double taskCostPerHour
-String taskCategory
}

class Transaction {
-Integer transID
-Boolean transPaid
-Date executionFinishDate
-Integer executionDelay
-String executionBriefDescription
}
class externalConverterCurrency{
}
class externalEmailSender

Platform"1" --> "*" Freelancer : has >
Platform"1" --> "*" Organization : has >
Platform"1" -->"*" Transaction : it has
Platform"1" -->"1" externalConverterCurrency : it has >
Platform"1" -->"1" externalEmailSender : it has >
Organization"1" -->"*" Task : Has >
Freelancer"1" -->"*" Organization : Works for >
externalEmailSender"1" --> "1"Transaction : gets info >
externalEmailSender"1" -->"1" externalConverterCurrency : interacts
Transaction"*" -->"1" Organization : of >
Transaction "1" --> "1" Task: refers to >
Transaction "1" --> "1" Freelancer: to >
@enduml
